tests/ui/rpc/fail/function_returning_impl_iterator.rs
use zod::{rpc, Namespace};

#[derive(Namespace)]
struct A;

#[rpc]
impl A {
    fn test(&mut self) -> impl std::iter::Iterator<Item = u8> {
        std::iter::once(0)
    }
}

fn main() {}
